Виправлено деякі помилки. Тести перевіряють основний функціонал програми та роботу бази данних. У подальших планах додати більше тестів та розширити функціонал.